840
We now get:
```scala
t1024.scala:3: error: type Test.T is not a stable prefix
  val x = new AnyRef with T#U { }
                            ^
```
